refactor(parser): parameters parsing and tag filtering simplified

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,16 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2015", "es2016", "es2017", "es2017.object", "dom"],
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017",
+      "es2018",
+      "es2019",
+      "es2020",
+      "ESNext",
+      "dom"
+    ],
     "noLib": false,
     "removeComments": true,
     "strict": true,
