--- a/package.json
+++ b/package.json
@@ -106,6 +106,11 @@
     "tslint-immutable": "^6.0.1",
     "typescript": "^3.9.5"
   },
+  "optionalDependencies": {
+    "@angular/core": "^11.0.0",
+    "@angular/common": "^11.0.0",
+    "rxjs": "^6.0.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged",
