build(): exclude test files from generator build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,6 @@
     "outDir": "dist",
     "typeRoots": ["node_modules/@types", "src/typings.d.ts"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.tests.ts"]
 }
