--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   "dependencies": {
     "handlebars": "^4.7.6",
     "optimist": "^0.6.1",
-    "swagger-parser": "^6.0.5",
+    "swagger-parser": "^10.0.2",
     "which": "^2.0.2"
   },
   "devDependencies": {
@@ -87,8 +87,6 @@
     "@types/node": "^14.14.14",
     "@types/optimist": "0.0.29",
     "@types/rimraf": "^3.0.0",
-    "@types/swagger-parser": "^4.0.3",
-    "@types/swagger-schema-official": "^2.0.21",
     "@types/which": "^1.3.2",
     "concurrently": "^5.3.0",
     "dir-compare": "^2.4.0",
@@ -96,11 +94,11 @@
     "jest": "^26.6.3",
     "jest-preset-typescript": "^1.2.0",
     "jest-sonar-reporter": "^2.0.0",
+    "openapi-types": "^7.0.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
-    "swagger-schema-official": "^2.0.0-bab6bed",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
