build(): scripts in dist nested in src due to imports outside of the src folder

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "5.0.0-beta.2",
   "description": "Angular REST API client generator from Swagger YAML or JSON file with camel case settings",
   "homepage": "https://github.com/flowup/api-client-generator/blob/master/README.md",
-  "main": "dist/src/main.js",
+  "main": "./dist/src/main.js",
   "author": {
     "name": "FlowUp",
     "email": "hello@flowup.cz",
     "url": "https://flowup.cz"
   },
   "bin": {
-    "api-client-generator": "./dist/main.js"
+    "api-client-generator": "./dist/src/main.js"
   },
   "bugs": {
     "url": "https://github.com/flowup/api-client-generator/issues"
