--- a/package.json
+++ b/package.json
@@ -78,37 +78,37 @@
     "dev:install": "npm ci --silent && cd tests/test-angular-project && npm ci --silent"
   },
   "dependencies": {
-    "handlebars": "^4.7.6",
+    "handlebars": "^4.7.7",
     "optimist": "^0.6.1",
-    "swagger-parser": "^10.0.2",
+    "swagger-parser": "^10.0.3",
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^27.4.1",
     "@types/node": "^14.14.14",
-    "@types/optimist": "0.0.29",
-    "@types/rimraf": "^3.0.0",
-    "@types/which": "^1.3.2",
-    "concurrently": "^5.3.0",
-    "dir-compare": "^2.4.0",
+    "@types/optimist": "^0.0.30",
+    "@types/rimraf": "^3.0.2",
+    "@types/which": "^2.0.1",
+    "concurrently": "^7.1.0",
+    "dir-compare": "^4.0.0",
     "husky": "^4.3.6",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
     "jest-preset-typescript": "^1.2.0",
     "jest-sonar-reporter": "^2.0.0",
     "openapi-types": "^7.0.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.1.1",
+    "standard-version": "^9.3.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "tslint-immutable": "^6.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.6.3"
   },
   "optionalDependencies": {
-    "@angular/core": "^11.0.0",
     "@angular/common": "^11.0.0",
+    "@angular/core": "^11.0.0",
     "rxjs": "^6.0.0"
   },
   "husky": {
